Adds blog sharing and liking functionality
Introduces components for LinkedIn sharing and liking blogs
Implements backend logic for tracking likes using client IPs
Updates Navbar to resolve color mode on mount

Removes unused Firebase database URL and adds request-ip dependency

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "firebase-admin": "^13.0.2",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
+    "request-ip": "^3.3.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@types/request-ip": "^0.0.41"
   }
 }
